--- a/index.html
+++ b/index.html
@@ -1,13 +1,41 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="estilos.css">
     <title>Prueba</title>
 </head>
+
 <body>
     <h1>esto es una prueba</h1>
     <p>esto es un parrafo</p>
     <img src="panda.jpg" alt="imagen de un panda">
+
+    <ul>
+        <li>mat</li>
+        <li>fis</li>
+    </ul>
+    <ol>
+        <li>papa</li>
+        <li>cebolla</li>
+        <li>pollo</li>
+    </ol>
+    <form>
+        <label for="text" class="etiqueta">Nombre: </label>
+        <input type="text" name="text" id="name">
+        <div>
+            <label for="text">Apellido:</label>
+            <input type="text" id="apellido">
+        </div>
+        <div>
+            <input type="submit" value="Enviar" class="enviar">
+        </div>
+    </form>
+    <h1> Hola soy otro titulo</h1>
+    <p>Este es un parrafo largo</p>
+
 </body>
+
 </html>
