--- a/ejemplo.html
+++ b/ejemplo.html
@@ -4,6 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="estilos.css">
     <title>Document</title>
 </head>
 
@@ -25,11 +26,10 @@
                     <label for=""  class="etiqueta">email:</label>
                     <input type="email" name="" id="email">
                 </div>
-                <input type="submit" value="registro">
-                <input type="submit" value="iniciar secion">
+                <input type="submit" class="etiquet" value="registro">
+                <input type="submit" class="etiquet" value="iniciar secion">
             </form>
         </div>
     </div>
 </body>
-
 </html>
