--- a/Lunes8enero/index.html
+++ b/Lunes8enero/index.html
@@ -1,11 +1,17 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link rel="stylesheet" href="style.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Nunito:wght@200;300;400&display=swap" rel="stylesheet">
     <title>Document</title>
 </head>
+
 <body>
     <div class="main">
         <div class="brochure">
@@ -16,6 +22,65 @@
                 <span>Download Brochure</span>
             </button>
         </div>
+        <div class="more-info">
+            <section class="icons-container">
+                <div class="card-container">
+                    <div class="card-icon">
+                        <figure>
+                           <img src="icons/icono.svg" alt="">
+                        </figure>
+                    </div>
+
+                    <div class="icon-text">
+                        <h2 class="icon-title">Research Materials</h2>
+                        <p class="icon-text">Guide your decisions with our wealth of research</p>
+                    </div>
+                </div>
+            </section>
+            <section class="icons-container">
+                <div class="card-container">
+                    <div class="card-icon">
+                        <figure>
+                            <img src="icons/icono.svg" alt="">
+                        </figure>
+                    </div>
+
+                    <div class="icon-text">
+                        <h2 class="icon-title">Research Materials</h2>
+                        <p class="icon-text">Guide your decisions with our wealth of research</p>
+                    </div>
+                </div>
+            </section>
+            <section class="icons-container">
+                <div class="card-container">
+                    <div class="card-icon">
+                        <figure>
+                            <img src="icons/icono.svg" alt="">
+                        </figure>
+                    </div>
+
+                    <div class="icon-text">
+                        <h2 class="icon-title">Research Materials</h2>
+                        <p class="icon-text">Guide your decisions with our wealth of research</p>
+                    </div>
+                </div>
+            </section>
+            <section class="icons-container">
+                <div class="card-container">
+                    <div class="card-icon">
+                        <figure>
+                            <img src="icons/icono.svg" alt="">
+                        </figure>
+                    </div>
+
+                    <div class="icon-text">
+                        <h2 class="icon-title">Research Materials</h2>
+                        <p class="icon-text">Guide your decisions with our wealth of research</p>
+                    </div>
+                </div>
+            </section>
+        </div>
     </div>
 </body>
+
 </html>
