--- a/Lunes8enero/index.html
+++ b/Lunes8enero/index.html
@@ -19,7 +19,7 @@
             <p class="subtitle">Free product design illustrations for startups and designers.</p>
             <p class="subtitle">High-quality digital assets that have been tested and reviewed by a team of</p>
             <button class="primary-button" value="">
-                <span>Download Brochure</span>
+                <span><img src="icons/descarga.svg" width="20px"  alt=""> Download Brochure</span >
             </button>
         </div>
         <div class="more-info">
