--- a/Lunes8enero/index.html
+++ b/Lunes8enero/index.html
@@ -4,22 +4,22 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <link rel="stylesheet" href="style.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Nunito:wght@200;300;400&display=swap" rel="stylesheet">
+    <link
+        href="https://fonts.googleapis.com/css2?family=Homemade+Apple&family=Nunito:wght@300;400;500;700&family=Roboto:wght@500;700;900&display=swap"
+        rel="stylesheet">
     <title>Document</title>
 </head>
-
 <body>
     <div class="main">
         <div class="brochure">
-            <h1 class="title">Situational Awreness in the Workplace</h1>
+            <h1 class="title">Situational Awareness in the Workplace</h1>
             <p class="subtitle">Free product design illustrations for startups and designers.</p>
-            <p class="subtitle">High-quality digital assets that have been tested and reviewed by a team of</p>
-            <button class="primary-button" value="">
-                <span><img src="icons/descarga.svg" width="20px"  alt=""> Download Brochure</span >
+            <p class="subtitle"> High-quality digital assets that have been tested and reviewed by a team of </p>
+            <button class="primary-button">
+                <img src="./icons/bx_bxs-download.svg" alt="" class="button-logo">
+                <p>Download Brochure</p>
             </button>
         </div>
         <div class="more-info">
@@ -27,55 +27,49 @@
                 <div class="card-container">
                     <div class="card-icon">
                         <figure>
-                           <img src="icons/icono.svg" alt="">
+                            <img src="./icons/descarga.svg" alt="" class="logo">
                         </figure>
                     </div>
 
                     <div class="icon-text">
                         <h2 class="icon-title">Research Materials</h2>
-                        <p class="icon-text">Guide your decisions with our wealth of research</p>
+                        <p class="icon-description">Guide your decisions with our wealth of research.</p>
                     </div>
                 </div>
-            </section>
-            <section class="icons-container">
                 <div class="card-container">
                     <div class="card-icon">
                         <figure>
-                            <img src="icons/icono.svg" alt="">
+                            <img src="./icons/descarga.svg" alt="" class="logo">
                         </figure>
                     </div>
 
                     <div class="icon-text">
                         <h2 class="icon-title">Research Materials</h2>
-                        <p class="icon-text">Guide your decisions with our wealth of research</p>
+                        <p class="icon-description">Guide your decisions with our wealth of research.</p>
                     </div>
                 </div>
-            </section>
-            <section class="icons-container">
                 <div class="card-container">
                     <div class="card-icon">
                         <figure>
-                            <img src="icons/icono.svg" alt="">
+                            <img src="./icons/descarga.svg" alt="" class="logo">
                         </figure>
                     </div>
 
                     <div class="icon-text">
-                        <h2 class="icon-title">Research Materials</h2>
-                        <p class="icon-text">Guide your decisions with our wealth of research</p>
+                        <h2 class="icon-title">Alert System</h2>
+                        <p class="icon-description">Our intelligent alert system identifies potential threats</p>
                     </div>
                 </div>
-            </section>
-            <section class="icons-container">
                 <div class="card-container">
                     <div class="card-icon">
                         <figure>
-                            <img src="icons/icono.svg" alt="">
+                            <img src="./icons/descarga.svg" alt="" class="logo">
                         </figure>
                     </div>
 
                     <div class="icon-text">
-                        <h2 class="icon-title">Research Materials</h2>
-                        <p class="icon-text">Guide your decisions with our wealth of research</p>
+                        <h2 class="icon-title">Alert System</h2>
+                        <p class="icon-description">Our intelligent alert system identifies potential threats</p>
                     </div>
                 </div>
             </section>
