--- a/portafolio/index.html
+++ b/portafolio/index.html
@@ -17,22 +17,22 @@
             <div class="profile">
 
                 <figure class="profile-img">
-                    <img src="assets/images/perfil_picture.jpeg" />
+                    <img src="assets/images/flork1.png" />
                 </figure>
 
 
 
                 <div class="profile-info">
-                    <h1>Victor Alvarado</h1>
-                    <p>Software Engineer</p>
+                    <h1>Alan Callisaya</h1>
+                    <p>super super junior</p>
                     <div class="profile-social">
-                        <a href="https://github.com" target="_blank">
+                        <a href="https://github.com/Hesiel10" target="_blank">
                             <img src="assets/icons/github.svg" alt="github" class="profile-social-img">
                         </a>
                         <a href="https://twitter.com" target="_blank">
                             <img src="assets/icons/twitter.svg" alt="twitter" class="profile-social-img">
                         </a>
-                        <a href="https://linkedin.com" target="_blank">
+                        <a href="https://www.linkedin.com/in/hesiel-callisaya-ab89512a5/" target="_blank">
                             <img src="assets/icons/linkedin.svg" alt="linkedin" class="profile-social-img">
                         </a>
                         <a href="https://youtube.com" target="_blank">
